@@ -59,11 +59,6 @@ static void sp_image_snappoints(SPItem const *item, SnapPointsIter p);
 static NRArenaItem *sp_image_show (SPItem *item, NRArena *arena, unsigned int key, unsigned int flags);
 static NR::Matrix sp_image_set_transform (SPItem *item, NR::Matrix const &xform);
 
-#ifdef ENABLE_AUTOTRACE
-static void sp_image_autotrace (GtkMenuItem *menuitem, SPAnchor *anchor);
-static void autotrace_dialog(SPImage * img);
-#endif /* Def: ENABLE_AUTOTRACE */
-
 GdkPixbuf * sp_image_repr_read_image (SPRepr * repr);
 static GdkPixbuf *sp_image_pixbuf_force_rgba (GdkPixbuf * pixbuf);
 static void sp_image_update_canvas_image (SPImage *image);
@@ -861,14 +856,6 @@ sp_image_set_transform(SPItem *item, NR::Matrix const &xform)
 	return ret;
 }
 
-#ifdef ENABLE_AUTOTRACE
-static void
-sp_image_autotrace (GtkMenuItem *menuitem, SPAnchor *anchor)
-{
-  autotrace_dialog (SP_IMAGE(anchor));
-}
-#endif /* Def: ENABLE_AUTOTRACE */
-
 static GdkPixbuf *
 sp_image_repr_read_dataURI (const gchar * uri_data)
 {	GdkPixbuf * pixbuf = NULL;
@@ -1007,255 +994,6 @@ sp_image_repr_read_b64 (const gchar * uri_data)
 
 	return pixbuf;
 }
-
-#ifdef ENABLE_AUTOTRACE
-#define GDK_PIXBUF_TO_AT_BITMAP_DEBUG 0
-#include <autotrace/autotrace.h>
-#include <frontline/frontline.h>
-
-#include "view.h"
-#include "desktop.h"
-#include "interface.h"
-
-/* getpid and umask */
-#include <sys/types.h>
-#include <unistd.h>
-#include <sys/stat.h>
-
-/* g_strdup_printf */
-#include <glib.h>
-
-static at_bitmap_type * gdk_pixbuf_to_at_bitmap (GdkPixbuf * pixbuf);
-static void load_trace_result(FrontlineDialog * fl_dialog, gpointer user_data);
-static void load_splines(at_splines_type * splines);
-static void load_file(const guchar * filename);
-static void handle_msg(at_string msg, at_msg_type msg_type, at_address client_data);
-static GtkWidget *  build_header_area(SPRepr *repr);
-
-static void
-autotrace_dialog (SPImage * img)
-{
-	// TRANSLATORS: "to trace" means "to vectorize" (to convert a bitmap to vector graphics)
-	gchar *title = _("Trace");
-
-	GtkWidget *trace_dialog;
-	GtkWidget * header_area;
-	GtkWidget * header_sep;
-	at_bitmap_type * bitmap;
-
-#ifdef FRONTLINE_INIT
-	frontline_init();
-#endif /* Def: FRONTLINE_INIT */
-
-	trace_dialog = frontline_dialog_new();
-	gtk_window_set_title (GTK_WINDOW (trace_dialog), title);
-
-	gtk_signal_connect_object_while_alive (GTK_OBJECT (img),
-					       "release",
-					       GTK_SIGNAL_FUNC (gtk_widget_destroy),
-					       GTK_OBJECT (trace_dialog));
-	gtk_signal_connect_object (GTK_OBJECT(FRONTLINE_DIALOG(trace_dialog)->close_button),
-				   "clicked",
-				   GTK_SIGNAL_FUNC(gtk_widget_destroy),
-				   GTK_OBJECT(trace_dialog));
-	gtk_signal_connect(GTK_OBJECT(trace_dialog),
-			   "trace_done",
-			   GTK_SIGNAL_FUNC (load_trace_result),
-			   trace_dialog);
-
-	header_area = build_header_area(SP_OBJECT_REPR(img));
-	gtk_box_pack_start_defaults(GTK_BOX(FRONTLINE_DIALOG(trace_dialog)->header_area),
-				    header_area);
-	gtk_widget_show(header_area);
-
-	header_sep = gtk_hseparator_new();
-	gtk_box_pack_start_defaults(GTK_BOX(FRONTLINE_DIALOG(trace_dialog)->header_area),
-				    header_sep);
-	gtk_widget_show(header_sep);
-
-
-	bitmap = gdk_pixbuf_to_at_bitmap(img->pixbuf);
-	frontline_dialog_set_bitmap(FRONTLINE_DIALOG(trace_dialog), bitmap);
-
-	gtk_widget_show (trace_dialog);
-}
-
-static at_bitmap_type *
-gdk_pixbuf_to_at_bitmap (GdkPixbuf * pixbuf)
-{
-	guchar *    datum;
-	at_bitmap_type * bitmap;
-	unsigned short width, height;
-	int i, j;
-
-	if (GDK_PIXBUF_TO_AT_BITMAP_DEBUG)
-		g_message("%d:channel %d:width %d:height %d:bits_per_sample %d:has_alpha %d:rowstride\n",
-			  gdk_pixbuf_get_n_channels(pixbuf),
-			  gdk_pixbuf_get_width(pixbuf),
-			  gdk_pixbuf_get_height(pixbuf),
-			  gdk_pixbuf_get_bits_per_sample(pixbuf),
-			  gdk_pixbuf_get_has_alpha(pixbuf),
-			  gdk_pixbuf_get_rowstride(pixbuf));
-
-	datum   = gdk_pixbuf_get_pixels(pixbuf);
-	width   = gdk_pixbuf_get_width(pixbuf);
-	height  = gdk_pixbuf_get_height(pixbuf);
-
-	bitmap = at_bitmap_new(width, height, 3);
-
-	if (gdk_pixbuf_get_has_alpha(pixbuf)) {
-		j = 0;
-		for(i = 0; i < width * height * 4; i++)
-			if (3 != (i % 4))
-				bitmap->bitmap[j++] = datum[i];
-	}
-	else
-		memmove(bitmap->bitmap, datum, width * height * 3);
-	return bitmap;
-}
-
-static void
-load_trace_result(FrontlineDialog * fl_dialog, gpointer user_data)
-{
-	FrontlineDialog * trace_dialog;
-	trace_dialog = FRONTLINE_DIALOG(user_data);
-
-	if (!trace_dialog->splines)
-	  return;
-	if (fl_ask(GTK_WINDOW(trace_dialog), trace_dialog->splines))
-	  load_splines(trace_dialog->splines);
-}
-
-
-static void
-load_splines(at_splines_type * splines)
-{
-  	static int serial_num = 0;
-	FILE * tmp_fp;
-	at_output_write_func writer;
-	gchar * filename;
-
-	mode_t old_mask;
-
-  	filename = g_strdup_printf("/tmp/at-%s-%d-%d.svg",
-				   g_get_user_name(),
-				   getpid(),
-				   serial_num++);
-
-	/* Make the mode of temporary svg file
-	   "readable and writable by the user only". */
-	old_mask = umask(066);
-	Inkscape::IO::dump_fopen_call(filename, "A");
-	tmp_fp = Inkscape::IO::fopen_utf8name(filename, "w");
-	umask(old_mask);
-
-	writer = at_output_get_handler_by_suffix ("svg");
-	at_splines_write (writer, tmp_fp, filename, NULL, splines,
-			  handle_msg, filename);
-	fclose(tmp_fp);
-
-	load_file (filename);
-
-	unlink(filename);
-	g_free(filename);
-}
-
-
-static void
-load_file (const guchar *filename)
-{
-	SPDocument * doc;
-	SPViewWidget *dtw;
-
-	/* fixme: Either use file:: method, or amke this private (Lauris) */
-	/* fixme: In latter case we may want to publish it on save (Lauris) */
-	doc = sp_document_new (filename, TRUE);
-	dtw = sp_desktop_widget_new (sp_document_namedview (doc, NULL));
-	sp_document_unref (doc);
-	sp_create_window (dtw, TRUE);
-}
-
-static void
-handle_msg(at_string msg, at_msg_type msg_type, at_address client_data)
-{
-	GtkWidget *dialog;
-	guchar * long_msg;
-	guchar * target = client_data;
-
-	if (msg_type == AT_MSG_FATAL) {
-		long_msg = g_strdup_printf(_("Error writing %s: %s"),
-					   target, msg);
-		dialog = gtk_message_dialog_new (NULL, GTK_DIALOG_MODAL,
-						 GTK_MESSAGE_ERROR,
-						 GTK_BUTTONS_OK,
-						 long_msg,
-						 NULL);
-		gtk_dialog_run(GTK_DIALOG(dialog));
-		gtk_widget_destroy(dialog);
-		g_free(long_msg);
-	}
-	else {
-		long_msg = g_strdup_printf("%s: %s", msg, target);
-		g_warning("%s", long_msg);
-		g_free(long_msg);
-	}
-}
-
-static GtkWidget *
-build_header_area(SPRepr *repr)
-{
-	const gchar * doc_name, * img_uri;
-	GtkWidget * vbox;
-	GtkWidget * hbox;
-	GtkWidget * label;
-	GtkWidget * entry;
-
-	vbox = gtk_vbox_new(TRUE, 4);
-	gtk_container_set_border_width(GTK_CONTAINER(vbox), 8);
-
-	/* Doc name */
-	doc_name = sp_repr_attr(sp_repr_document_root(sp_repr_document(repr)),
-				"sodipodi:docname");
-	if (!doc_name)
-		doc_name = _("Untitled");
-	hbox = gtk_hbox_new(FALSE, 2);
-	gtk_box_pack_start_defaults(GTK_BOX(vbox), hbox);
-	gtk_widget_show(hbox);
-
-	label = gtk_label_new(_("Document Name:"));
-	entry = gtk_entry_new();
-	gtk_entry_set_text(GTK_ENTRY(entry), doc_name);
-	gtk_entry_set_editable(GTK_ENTRY(entry), FALSE);
-	gtk_box_pack_start(GTK_BOX(hbox), label, FALSE, FALSE, 0);
-	gtk_box_pack_start(GTK_BOX(hbox), entry, TRUE, TRUE, 4);
-	gtk_widget_show(label);
-	gtk_widget_show(entry);
-	gtk_widget_set_sensitive(entry, FALSE);
-
-	/* Image URI */
-	img_uri = sp_repr_attr(repr, "xlink:href");
-	if (!img_uri)
-		img_uri = _("Unknown");
-
-	hbox = gtk_hbox_new(FALSE, 2);
-	gtk_box_pack_start_defaults(GTK_BOX(vbox), hbox);
-	gtk_widget_show(hbox);
-
-	label = gtk_label_new(_("Image URI:"));
-	entry = gtk_entry_new();
-	gtk_entry_set_text(GTK_ENTRY(entry), img_uri);
-	gtk_entry_set_editable(GTK_ENTRY(entry), FALSE);
-	gtk_box_pack_start(GTK_BOX(hbox), label, FALSE, FALSE, 0);
-	gtk_box_pack_start(GTK_BOX(hbox), entry, TRUE, TRUE, 4);
-	gtk_widget_show(label);
-	gtk_widget_show(entry);
-	gtk_widget_set_sensitive(entry, FALSE);
-
-	return vbox;
-}
-
-#endif /* Def: ENABLE_AUTOTRACE */
-
 
 /*
   Local Variables:
